Change Header color in install step Change Background of form control Fix success color to have enough contrast with white Fix warning badge Fix low contrast in caption for languages Fix margins

--- a/installation/template/scss/template.scss
+++ b/installation/template/scss/template.scss
@@ -207,6 +207,12 @@ body {
   }
 }
 
+.header {
+  .h2 {
+    margin-bottom: 0;
+  }
+}
+
 .j-install {
   display: flex;
   flex-direction: column;
@@ -434,6 +440,8 @@ legend {
 // Language Table
 caption {
   caption-side: top;
+  margin: 0 1rem 0 0;
+  padding: 0;
 }
 
 @if $enable-dark-mode {
